# linkersh-cdn

./: .env.example  .gitignore  Cargo.toml  Dockerfile  compose.yml
migrations/: 0001_users.down.sql  0001_users.up.sql  0002_cdn_object.down.sql  0002_cdn_object.up.sql  0003_cdn_objects_slug.down.sql  0003_cdn_objects_slug.up.sql  0004_object_sum.down.sql  0004_object_sum.up.sql  0005_object_flags.down.sql  0005_object_flags.up.sql
ocr/: download.sh
pg/: Dockerfile  postgresql.conf
src/: main.rs  ocr.rs  state.rs
src/auth/: mod.rs  user.rs
src/db/: mod.rs
src/meili/: mod.rs
src/server/: auth.rs  cdn.rs  error.rs  middleware.rs  mod.rs  profile.rs  state.rs
src/storage/: mod.rs
src/tasks/: mod.rs
